// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Summary Chart should dispatch a get chart data 1`] = `
Array [
  Array [
    Promise {},
  ],
  Array [
    Object {
      "payload": Object {
        "data": Object {
          "params": Object {},
          "path": "deliverability/time-series",
          "type": "FETCH_CHART_DATA",
        },
        "metrics": undefined,
        "precision": undefined,
      },
      "type": "REFRESH_SUMMARY_CHART",
    },
  ],
]
`;

exports[`Action Creator: Summary Chart should dispatch a get table data action 1`] = `
Array [
  Array [
    Promise {},
  ],
  Array [
    Object {
      "payload": Object {
        "data": Object {
          "params": Object {
            "delimiter": ",",
            "from": "2017-02-14T12:51",
            "metrics": "",
            "precision": "1min",
            "to": "2017-02-14T12:51",
          },
          "path": "deliverability/domain",
          "type": "FETCH_TABLE_DATA",
        },
        "groupBy": "domain",
        "metrics": Array [
          "metric",
        ],
      },
      "type": "REFRESH_SUMMARY_TABLE",
    },
  ],
]
`;

exports[`Action Creator: Summary Chart should dispatch a refresh action 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "groupBy": "domain",
        "metrics": Array [
          "metric",
        ],
      },
      "type": "REFRESH_REPORT_RANGE",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    [Function],
  ],
]
`;
